# cfgpp-format

./: .editorconfig  .gitignore  AppConfig.cfgpp.txt  AppConfig_Version5.cfgpp.txt  CHANGELOG.md  CLI_USAGE_EXAMPLES.md  COMPREHENSIVE_API_EXAMPLES.md  CONTEXT_README.md  CONTRIBUTING.md  CONTRIBUTING_Version2.md  DOCUMENTATION_UPDATES_NEEDED.md  IMPLEMENTATION_STANDARDIZATION_PLAN.md  LICENSE  LICENSE_Version2.txt  PLANS_LOCATION.md  PRACTICAL_USAGE_EXAMPLES.md  PROJECT_HIERARCHY_WITH_EXAMPLES.md  PROJECT_REVIEW_CHECKLIST.md  QUICKSTART.md  README.md  README_COMPLETE.md  README_FORMATTER.md  README_Version3.md  REORGANIZATION_MAP.md  SYNTAX_REFERENCE.md  brainstorm-syntax-improvements.txt  generate_parser.py  gitignore_Version2.txt  methodology_and_mindset_touch.txt  requirements.txt  test_enum_manual.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-installers.yml  ci.yml  codeql.yml  release.yml
docs/: HASH_VALIDATION_DESIGN.md  IMMEDIATE_NEXT_STEPS.md  IMPLEMENTATION_STRATEGY_RISK_MINIMIZED.md  NEXT_STEPS_AI_FEATURES.md  README.md  api-reference.md  contributing.md  error-handling.md  getting-started.md  immediate-next-steps.md  implementation-strategy-risk-minimized.md  language-server-design.md  language-specification.md  next-steps-ai-features.md  practical-examples-hash-compression.md  roadmap-ai-aware-configuration.md  syntax-examples.md
docs/development/: CRITICAL_ISSUES_RESOLVED.md  README.md
examples/: .cfgpp-format  .cfgpp-format-compact  complex_config.cfgpp
implementations/cpp-labview/: README.md  cfgpp_parser.h
implementations/cpp-labview/cpp-parser-labview/: CFGPPParserConfig.cmake.in  CMakeLists.txt  cfgpp_parser.cpp
implementations/cpp-labview/examples/: labview_example.cpp  labview_integration_example.cpp
implementations/python/: README.md  cfgpp.spec  debug_binary_toc.py  pyproject.toml  setup.py  test_binary_toc.py
implementations/python/src/: cfgpp_standalone.py
implementations/python/src/cfgpp/: __init__.py  __main__.py  cli.py  cli_formatter.py  cli_schema.py  compression.py  features.py  formatter.py  hash_validator.py  language_server.py  lexer.py  parser.py  schema_integration.py  schema_parser.py  schema_validator.py
implementations/python/src/cfgpp/ai/: __init__.py  compression.py  feature_flags.py  hash_validator.py  parser.py
implementations/python/src/cfgpp/ai/extensions/: __init__.py  hierarchical.py
implementations/python/src/cfgpp/core/: __init__.py  formatter.py  parser.py
implementations/python/src/cfgpp/schema/: __init__.py  integration.py  schema_parser.py  schema_validator.py
implementations/python/src/cfgpp/tools/: __init__.py  language_server.py
implementations/python/src/cfgpp/tools/cli/: __init__.py  cli.py  format_commands.py  schema_commands.py
implementations/python/src/cfgpp_format/binary_toc/: __init__.py  decoder.py  encoder.py  types.py  validator.py
implementations/python/temp_binary_toc/: decoded.cfgpp  manual_test.cbt1  manual_test.cfgpp  test.cbt1
implementations/python/temp_debug/: hello-world.cbt1
implementations/python/tests/: test_ai_parser.py  test_compression.py  test_enum_support.py  test_examples_validation.py  test_formatter.py  test_hash_validator.py  test_hierarchical_parser.py  test_integration.py  test_language_server.py  test_namespaced_identifiers.py  test_parser.py  test_schema_support.py
implementations/rust/: Cargo.toml  README.md
implementations/rust/benches/: parser_benchmark.rs
implementations/rust/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  schema.rs  serde_support.rs  value.rs
plans/: 00-strategic-inventory-and-priorities.md  01-syntax-modernization.md  02-binary-toc-evolution.md  03-ai-aware-features.md  04-comprehensive-example-library.md  05-crazy-advanced-ideas.md  06-reality-check-and-validation.md  07-credible-development-methodology.md  08-extension-marketplace-strategy.md  09-binary-toc-frankenstein-experiments.md  10-world-publication-strategy.md  README.md
project-config/: messaging_system.py  messenger.py  meta-integration.md  meta_bridge.py  meta_paths.json  notifications.py  validation.py
scripts/: run_example.ps1
scripts/mcp/: cfgpp_server.py
specification/: grammar.ebnf
specification/examples/: README.md  app.cfgpp-schema  complex_config.cfgpp  file-naming-conventions.md  hello-world.cfgpp
specification/examples/advanced/: README.md  complex-enums.cfgpp  type-reusage.cfgpp
specification/examples/ai-aware/: README.md  ai-reasoning-modes.ai.cfgpp  ai-signatures.ai.cfgpp  ai-to-ai-transfer.c.h.ai.cfgpp  compression-config.cfgpp  compression.cfgpp  hash-validation.cfgpp  section-hashing.h.cfgpp  streaming-compression.c.cfgpp  trust-networks.ai.cfgpp
specification/examples/basic/: README.md  comments.cfgpp  data-types.cfgpp  environment-variables.cfgpp  hello-world.cfgpp
specification/examples/keying/: README.md  cross-referencing.k.cfgpp  dynamic-keying.k.cfgpp  enum-keying.k.cfgpp  fast-lookup.k.cfgpp  hierarchical-paths.k.cfgpp
specification/examples/performance/: deep-nesting.k.cfgpp  massive-arrays.cfgpp
specification/examples/stress-tests/: README.md
src/cfgpp/: __init__.py  cli.py  cli_formatter.py  language_server.py  lexer.py  parser.py  schema_parser.py  schema_validator.py
src/cfgpp/grammar/: Cfgpp.g4
tests/: test_formatter.py  test_integration.py  test_language_server.py  test_namespaced_identifiers.py  test_parser.py  test_schema_support.py
vscode-extension/: .vscodeignore  CHANGELOG.md  PUBLISHING_GUIDE.md  README.md  build-extensions.ps1  cfgpp-language-support-1.0.3-final.vsix  cfgpp-language-support-1.0.4.vsix  cfgpp-language-support-1.1.0.vsix  cfgpp-language-support-1.2.0.vsix  cfgpp-language-support-openvsx-1.2.1.vsix  cfgpp-language-support-vscode-1.2.1.vsix  language-configuration.json  package-lock.json  package-openvsx.json  package-vscode.json.bak  package.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: cfgpp-schema.tmGrammar.json  cfgpp.tmGrammar.json
(+15 files in other folders)
