[package]
name = "cfgpp"
version = "0.1.0"
edition = "2021"
authors = ["CFG++ Team"]
description = "High-performance CFG++ configuration format parser and serializer"
license = "MIT"
repository = "https://github.com/cfgpp-format/cfgpp-format"
documentation = "https://docs.rs/cfgpp"
readme = "README.md"
keywords = ["config", "parser", "serialization", "performance"]
categories = ["config", "parsing", "encoding"]

[dependencies]
# Core parsing
nom = "7.1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Error handling  
thiserror = "1.0"
anyhow = "1.0"

# Performance optimizations
rayon = { version = "1.8", optional = true }          # Parallel processing
memmap2 = { version = "0.9", optional = true }        # Memory-mapped file I/O
simd-json = { version = "0.13", optional = true }     # SIMD-optimized JSON fallback

# Schema validation
jsonschema = { version = "0.18", optional = true }
regex = { version = "1.10", optional = true }

# String interning for performance
string-interner = { version = "0.17", optional = true }

# Environment variable expansion
envsubst = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"

[features]
default = ["std", "serde", "schema-validation"]
std = []
serde = ["dep:serde", "dep:serde_json"]
schema-validation = ["jsonschema", "regex"]
parallel = ["rayon"]
mmap = ["memmap2"]
simd = ["simd-json"]

[[bench]]
name = "parser_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
